# highlandcows

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs.yml  publish.yml
crates/highlandcows/: Cargo.toml
crates/highlandcows/src/: lib.rs
crates/isam/: Cargo.toml
crates/isam/src/: error.rs  isam.rs  lib.rs  manager.rs  secondary_index.rs  storage.rs  store.rs  transaction.rs
crates/isam/src/index/: mod.rs  pager.rs
crates/isam/tests/: btree.rs  compaction.rs  crud.rs  integration.rs  iterators.rs  persistence.rs  secondary_index.rs  single_user.rs  transactions.rs
crates/isam/tests/common/: mod.rs
src/: error.rs  isam.rs  lib.rs  store.rs
src/index/: mod.rs
tests/: integration.rs
