[package]
name    = "rust-isam"
version = "0.1.0"
edition = "2021"

[dependencies]
serde     = { version = "1", features = ["derive"] }
bincode   = "1"          # pin to 1.x — simpler fixed-size API for newcomers
thiserror = "1"

[dev-dependencies]
tempfile  = "3"          # temp dirs auto-cleaned after each test
